<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/months"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MonthsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/months_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/january_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/january_month"
                android:onClick="januaryClickHandler" />

            <Button
                android:id="@+id/february_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/february_month"
                android:onClick="februaryClickHandler" />

            <Button
                android:id="@+id/march_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/march_month"
                android:onClick="marchClickHandler" />

            <Button
                android:id="@+id/april_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/april_month"
                android:onClick="aprilClickHandler" />

            <Button
                android:id="@+id/may_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/may_month"
                android:onClick="mayClickHandler" />

            <Button
                android:id="@+id/june_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/june_month"
                android:onClick="juneClickHandler" />

            <Button
                android:id="@+id/july_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/july_month"
                android:onClick="julyClickHandler" />

            <Button
                android:id="@+id/august_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/august_month"
                android:onClick="augustClickHandler"/>

            <Button
                android:id="@+id/september_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/september_month"
                android:onClick="septemberClickHandler"/>

            <Button
                android:id="@+id/october_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/october_month"
                android:onClick="octoberClickHandler"/>

            <Button
                android:id="@+id/november_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/november_month"
                android:onClick="novemberClickHandler"/>

            <Button
                android:id="@+id/december_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/december_month"
                android:onClick="decemberClickHandler"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>